--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - rental-listing-app</title>
+    <title>BasoBaas.com | Find Home</title>
   </head>
   <body>
     <div id="app"></div>
